--- a/Doc/Notebooks/GephiStreaming_UserGuide.ipynb
+++ b/Doc/Notebooks/GephiStreaming_UserGuide.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:36c0fd01bd9b28587c8e80aa109a882f78b08514aa3e1d577bc4811afd9629f7"
+  "signature": "sha256:7dd498ea7bdbffe648d79d65aa8f29c7f7e53c6947149e89e3b79ec603e77306"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -17,7 +17,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 2
     },
     {
      "cell_type": "heading",
@@ -73,7 +73,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -91,16 +91,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Could not connect to the gephi streaming plugin. Did you start the streaming master server in gephi?\n"
-       ]
-      }
-     ],
-     "prompt_number": 8
+     "outputs": [],
+     "prompt_number": 7
     },
     {
      "cell_type": "heading",
@@ -130,19 +122,19 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "PLM(balanced,) detected communities in 0.04051399230957031 [s]\n",
+        "PLM(balanced,) detected communities in 0.04398536682128906 [s]\n",
         "solution properties:\n",
         "-------------------  ----------\n",
-        "# communities         8\n",
-        "min community size   32\n",
-        "max community size   44\n",
-        "avg. community size  37.5\n",
-        "modularity            0.0989194\n",
+        "# communities         5\n",
+        "min community size   29\n",
+        "max community size   82\n",
+        "avg. community size  60\n",
+        "modularity            0.0915229\n",
         "-------------------  ----------\n"
        ]
       }
      ],
-     "prompt_number": 16
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -153,7 +145,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 11
     },
     {
      "cell_type": "markdown",
@@ -181,12 +173,20 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "client = gephi.streaming.GephiStreamingClient(url='http://localhost:9090/workspace0')"
+      "client = gephi.streaming.GephiStreamingClient(url='http://localhost:8080/workspace0')"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 12
+     "prompt_number": 9
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
