--- a/Doc/Notebooks/Backbones.ipynb
+++ b/Doc/Notebooks/Backbones.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:ba0e20ce8089ab1ac2c082617240c61d5daecbcb3bae36793993fd9bd50019ed"
+  "signature": "sha256:8a08e827731bd8dcbe02b2986bb8b22cd691996298b8a8d2fbf2e3b019c0244e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -17,26 +17,31 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "G = readGraph(\"../../input/backbones/kitEmail.graphml\", graphio.formats.graphml)"
+      "G = readGraph(\"../../input/backbones/"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "identified graph as weighted\n"
+       "ename": "Exception",
+       "evalue": "unrecognized format/format not supported as input: Format.GML",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-3-24b4914ad4b5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mG\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mreadGraph\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"../../input/backbones/lesmis.gml\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mFormat\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mGML\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[1;32m/home/gerd/workspace/NetworKit-glindner/src/python/graphio.py\u001b[0m in \u001b[0;36mreadGraph\u001b[1;34m(path, fileformat, **kwargs)\u001b[0m\n\u001b[0;32m     73\u001b[0m                         \u001b[0mcommentPrefix\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mcontinuous\u001b[0m \u001b[0mare\u001b[0m \u001b[0moptional\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     74\u001b[0m \t\"\"\"\n\u001b[1;32m---> 75\u001b[1;33m         \u001b[0mreader\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgetReader\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfileformat\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     76\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     77\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;32m/home/gerd/workspace/NetworKit-glindner/src/python/graphio.py\u001b[0m in \u001b[0;36mgetReader\u001b[1;34m(fileformat, **kwargs)\u001b[0m\n\u001b[0;32m     61\u001b[0m                         \u001b[0mreader\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mreaders\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mfileformat\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;31m#(**kwargs)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     62\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 63\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"unrecognized format/format not supported as input: {0}\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfileformat\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     64\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mreader\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     65\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;31mException\u001b[0m: unrecognized format/format not supported as input: Format.GML"
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
