Updated backbone ipython notebooks
--HG--
branch : sparsification

--- a/Doc/Notebooks/BackboneComparison.ipynb
+++ b/Doc/Notebooks/BackboneComparison.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:08551423ef4b367065daa43b393b67b902012eaa6509e0d831fe963e28ccbbc9"
+  "signature": "sha256:3da4c68c6e2adad4ca3833143e4a760e788e9cf40cd589908f6ebc5ebe6ee6c0"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -63,17 +63,17 @@
      "collapsed": false,
      "input": [
       "#Simmelian Backbone\n",
-      "simmel = backbones.SimmelianBackbone()\n",
-      "B_simmel = simmel.calculateParametric(G, 10, 5)\n",
+      "simmel = backbones.SimmelianBackbone(10, 5)\n",
+      "B_simmel = simmel.calculate(G)\n",
       "\n",
       "#Multiscale Backbone\n",
-      "multiscale = backbones.MultiscaleBackbone(G, 0.0001)\n",
-      "B_multiscale = multiscale.calculate()"
+      "multiscale = backbones.MultiscaleBackbone(0.0001)\n",
+      "B_multiscale = multiscale.calculate(G)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 13
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
