--- a/Doc/Notebooks/Backbones.ipynb
+++ b/Doc/Notebooks/Backbones.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:cebf1252391b1b5909114f73e7ac869601d63f9ea62ebefe6d7caa9417c40e03"
+  "signature": "sha256:fbebcfc2d81385f2b572fe45200849eb48f184189babd3c7dc9826fbd0d3028f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -17,7 +17,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -36,7 +36,7 @@
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 2
     },
     {
      "cell_type": "heading",
@@ -56,13 +56,13 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print(B.numberOfEdges())"
+      "print(B.numberOfNodes(), B.numberOfEdges())"
      ],
      "language": "python",
      "metadata": {},
@@ -71,21 +71,10 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "8248\n"
+        "1073 8248\n"
        ]
       }
      ],
-     "prompt_number": 5
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "backbones.writeCsv(\"../../output/backbones/graph.csv\", G, B)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
      "prompt_number": 6
     },
     {
@@ -122,7 +111,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print(B.numberOfEdges())"
+      "print(B.numberOfNodes(), B.numberOfEdges())"
      ],
      "language": "python",
      "metadata": {},
@@ -131,22 +120,60 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "9984\n"
+        "1073 9984\n"
        ]
       }
      ],
      "prompt_number": 9
     },
     {
+     "cell_type": "heading",
+     "level": 6,
+     "metadata": {},
+     "source": [
+      "Combination of Multiscale and Simmelian Backbone:"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "backbones.writeCsv(\"../../output/backbones/graph.csv\", G, B)"
+      "simmelMulti = backbones.SimmelianMultiscaleBackbone(1.0)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 9
+     "prompt_number": 22
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "B = simmelMulti.calculate(G)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 23
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print(B.numberOfNodes(), B.numberOfEdges())"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "1073 13605\n"
+       ]
+      }
+     ],
+     "prompt_number": 24
     },
     {
      "cell_type": "heading",
