--- a/Doc/Notebooks/Backbones.ipynb
+++ b/Doc/Notebooks/Backbones.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:fbebcfc2d81385f2b572fe45200849eb48f184189babd3c7dc9826fbd0d3028f"
+  "signature": "sha256:7773d48fd3bf10bd1b1d76a0c139ae1dfe4bc96acf508094be0b095a6a4ec79e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -39,6 +39,25 @@
      "prompt_number": 2
     },
     {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print(G.numberOfNodes(), G.numberOfEdges())"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "1073 13713\n"
+       ]
+      }
+     ],
+     "prompt_number": 3
+    },
+    {
      "cell_type": "heading",
      "level": 6,
      "metadata": {},
@@ -56,7 +75,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -75,7 +94,7 @@
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 5
     },
     {
      "cell_type": "heading",
@@ -94,7 +113,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -105,7 +124,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 8
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -124,7 +143,7 @@
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 8
     },
     {
      "cell_type": "heading",
@@ -138,12 +157,12 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "simmelMulti = backbones.SimmelianMultiscaleBackbone(1.0)"
+      "simmelMulti = backbones.SimmelianMultiscaleBackbone(0.5)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 22
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -154,7 +173,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 23
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -169,11 +188,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "1073 13605\n"
+        "1073 12349\n"
        ]
       }
      ],
-     "prompt_number": 24
+     "prompt_number": 11
     },
     {
      "cell_type": "heading",
