Backbone evaluation notebook
--HG--
branch : sparsification

--- a/Doc/Notebooks/Backbones.ipynb
+++ b/Doc/Notebooks/Backbones.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:7773d48fd3bf10bd1b1d76a0c139ae1dfe4bc96acf508094be0b095a6a4ec79e"
+  "signature": "sha256:abbe0295bef2351529a27009e890a2625afcd0bc32d3da156c5dfba519fa9bf4"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -244,6 +244,33 @@
      "collapsed": false,
      "input": [
       "client.exportBackboneAttribute(G, B, \"backbone\")"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 12
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "heading",
+     "level": 6,
+     "metadata": {},
+     "source": [
+      "Writing graphs"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "writeGraph(G, \"../../output/test.graphml\", Format.METIS)"
      ],
      "language": "python",
      "metadata": {},
