Reciprocity check added to simmelian backbone
--HG--
branch : sparsification

--- a/Doc/Notebooks/BackboneEvaluation.ipynb
+++ b/Doc/Notebooks/BackboneEvaluation.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:7a9f28255cd4f489e98648c6aed07a85d613f5ec9e6bcf3d7e4c1b1cc52c0e26"
+  "signature": "sha256:00711754f2bbb374fa82c3de5558f7544900a56310a4fac92d83038ccd1ba614"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -29,7 +29,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -38,12 +38,12 @@
       "inDir = \"/home/gerd/workspace/bc/ComplexNetworkBackbones/backboneEvaluation/output/\"\n",
       "inGraph =\"Caltech36.graphml\"\n",
       "inGName = \"Original graph\"\n",
-      "inBName = \"SB_10_5\" #SB_10_1, SB_Jaccard_0.9"
+      "inBName = \"SMB_0.3\" #SB_10_1, SB_Jaccard_0.9, SMB_0.5"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 19
+     "prompt_number": 8
     },
     {
      "cell_type": "heading",
@@ -62,7 +62,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 15
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -76,7 +76,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 14
+     "prompt_number": 5
     },
     {
      "cell_type": "heading",
@@ -96,7 +96,15 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 20
+     "prompt_number": 9
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "code",
