--- a/Doc/Notebooks/BackboneEvaluation.ipynb
+++ b/Doc/Notebooks/BackboneEvaluation.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:00711754f2bbb374fa82c3de5558f7544900a56310a4fac92d83038ccd1ba614"
+  "signature": "sha256:bb1ed6778dc900e1d5630beed5deea2dae4c8a999c5a980b1158c78f9d580d05"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -17,7 +17,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -99,12 +99,76 @@
      "prompt_number": 9
     },
     {
+     "cell_type": "heading",
+     "level": 6,
+     "metadata": {},
+     "source": [
+      "\"Fresh\" calculation:"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "G = readGraph(\"/home/gerd/workspace/bc/ComplexNetworkBackbones/backboneEvaluation/input/Caltech36.graphml\", Format.GraphML)\n",
+      "client = gephi.streaming.GephiStreamingClient()"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 17
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "communities = community.detectCommunities(G)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "PLM(balanced,) detected communities in 0.1706547737121582 [s]\n",
+        "solution properties:\n",
+        "-------------------  ----------\n",
+        "# communities         11\n",
+        "min community size     2\n",
+        "max community size   146\n",
+        "avg. community size   69.9091\n",
+        "modularity             0.400469\n",
+        "-------------------  ----------\n"
+       ]
+      }
+     ],
+     "prompt_number": 18
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "simmel = backbones.SimmelianBackbone(10, 5)\n",
+      "B = simmel.calculate(G)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 19
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "client.exportGraph(G)\n",
+      "client.exportNodeValues(G, communities, \"community\")\n",
+      "client.exportBackboneAttribute(G, B, \"backbone\")"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 20
     },
     {
      "cell_type": "code",
