--- a/Doc/Notebooks/BackboneEvaluation.ipynb
+++ b/Doc/Notebooks/BackboneEvaluation.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:bb1ed6778dc900e1d5630beed5deea2dae4c8a999c5a980b1158c78f9d580d05"
+  "signature": "sha256:af8f213572ed53d872c7e5eeb3420847ca16e58346c61c8084086daa40978b85"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -17,7 +17,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -116,7 +116,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 17
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -131,19 +131,19 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "PLM(balanced,) detected communities in 0.1706547737121582 [s]\n",
+        "PLM(balanced,) detected communities in 0.05464601516723633 [s]\n",
         "solution properties:\n",
         "-------------------  ----------\n",
-        "# communities         11\n",
+        "# communities         10\n",
         "min community size     2\n",
-        "max community size   146\n",
-        "avg. community size   69.9091\n",
-        "modularity             0.400469\n",
+        "max community size   144\n",
+        "avg. community size   76.9\n",
+        "modularity             0.400267\n",
         "-------------------  ----------\n"
        ]
       }
      ],
-     "prompt_number": 18
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -161,6 +161,27 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "simmelMultiscale = backbones.SimmelianMultiscaleBackbone(0.2)\n",
+      "B = simmelMultiscale.calculate(G)\n",
+      "print(G.numberOfEdges(), \" \", B.numberOfEdges())"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "16656   2611\n"
+       ]
+      }
+     ],
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "client.exportGraph(G)\n",
       "client.exportNodeValues(G, communities, \"community\")\n",
       "client.exportBackboneAttribute(G, B, \"backbone\")"
@@ -168,7 +189,39 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 20
+     "prompt_number": 6
+    },
+    {
+     "cell_type": "heading",
+     "level": 6,
+     "metadata": {},
+     "source": [
+      "Recalculation:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "simmelMultiscale = backbones.SimmelianMultiscaleBackbone(0.2)\n",
+      "B = simmelMultiscale.calculate(G)\n",
+      "print(G.numberOfEdges(), \" \", B.numberOfEdges())\n",
+      "client.exportGraph(G)\n",
+      "client.exportNodeValues(G, communities, \"community\")\n",
+      "client.exportBackboneAttribute(G, B, \"backbone\")"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "16656   2611\n"
+       ]
+      }
+     ],
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
