--- a/Doc/Notebooks/Backbones.ipynb
+++ b/Doc/Notebooks/Backbones.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:b920079a06f4cd114f2665e5d136c2076bbc394d678ebc3241a8602ca3355154"
+  "signature": "sha256:37c457fb6df6bea9298e4b9cc9cd5d7cb115fb2917874573c3a9e78f220d6fbb"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -69,7 +69,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "simmel = backbones.SimmelianBackbone(10, 5)\n",
+      "simmel = backbones.SimmelianBackboneParametric(10, 5)\n",
       "B = simmel.calculate(G)"
      ],
      "language": "python",
@@ -108,7 +108,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "simmel = backbones.SimmelianBackbone(0.5)"
+      "simmel = backbones.SimmelianBackboneNonParametric(0.5)"
      ],
      "language": "python",
      "metadata": {},
