Cythonized local similarity backbone
--HG--
branch : sparsification

--- a/Doc/Notebooks/Backbones.ipynb
+++ b/Doc/Notebooks/Backbones.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:37c457fb6df6bea9298e4b9cc9cd5d7cb115fb2917874573c3a9e78f220d6fbb"
+  "signature": "sha256:6dadacaee120b3b9a7479bce0147fc1c470b14fee548b6a51465b37bf2ac9fb2"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -144,6 +144,24 @@
       }
      ],
      "prompt_number": 8
+    },
+    {
+     "cell_type": "heading",
+     "level": 6,
+     "metadata": {},
+     "source": [
+      "Local Similarity Backbones:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "localSim = backbones."
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "heading",
