Multiscale variant using simmelianness added
--HG--
branch : sparsification

--- a/Doc/Notebooks/Backbones.ipynb
+++ b/Doc/Notebooks/Backbones.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:6dadacaee120b3b9a7479bce0147fc1c470b14fee548b6a51465b37bf2ac9fb2"
+  "signature": "sha256:60390651ce3557cf9933a8ae4070f55763791a3d397625c1c219598534d857b6"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -23,19 +23,11 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "G = readGraph(\"../../input/backbones/us_aviation_t100_2013.graphml\", Format.GraphML)"
+      "G = readGraph(\"../../../ComplexNetworkBackbones/evaluation/input/Caltech36.graphml\", Format.GraphML)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "identified graph as weighted\n"
-       ]
-      }
-     ],
+     "outputs": [],
      "prompt_number": 2
     },
     {
@@ -51,7 +43,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "1073 13713\n"
+        "769 16656\n"
        ]
       }
      ],
@@ -90,7 +82,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "1073 7842\n"
+        "769 5539\n"
        ]
       }
      ],
@@ -139,7 +131,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "1073 8741\n"
+        "769 5974\n"
        ]
       }
      ],
@@ -157,25 +149,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "localSim = backbones."
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "heading",
-     "level": 6,
-     "metadata": {},
-     "source": [
-      "Combination of Multiscale and Simmelian Backbone:"
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "simmelMulti = backbones.SimmelianMultiscaleBackbone(0.5)"
+      "localSim = backbones.LocalSimilarityBackbone(0.5)"
      ],
      "language": "python",
      "metadata": {},
@@ -186,7 +160,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "B = simmelMulti.calculate(G)"
+      "B = localSim.calculate(G)"
      ],
      "language": "python",
      "metadata": {},
@@ -206,11 +180,60 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "1073 12349\n"
+        "769 13712\n"
        ]
       }
      ],
      "prompt_number": 11
+    },
+    {
+     "cell_type": "heading",
+     "level": 6,
+     "metadata": {},
+     "source": [
+      "Combination of Multiscale and Simmelian Backbone:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "simmelMulti = backbones.SimmelianMultiscaleBackbone(0.37)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 42
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "B = simmelMulti.calculate(G)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 43
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print(B.numberOfNodes(), B.numberOfEdges())"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "769 9057\n"
+       ]
+      }
+     ],
+     "prompt_number": 44
     },
     {
      "cell_type": "heading",
