--- a/Doc/Notebooks/Backbones.ipynb
+++ b/Doc/Notebooks/Backbones.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:60390651ce3557cf9933a8ae4070f55763791a3d397625c1c219598534d857b6"
+  "signature": "sha256:5e8ffb24942f3dcd44795d11b607589ebfad7e1f7ef5c5add0ed141c19cf7922"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -23,12 +23,12 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "G = readGraph(\"../../../ComplexNetworkBackbones/evaluation/input/Caltech36.graphml\", Format.GraphML)"
+      "G = readGraph(\"../../../ComplexNetworkBackbones/evaluation/input/LFR-100000.graph\", Format.METIS)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -43,11 +43,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "769 16656\n"
+        "100000 980295\n"
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 8
     },
     {
      "cell_type": "heading",
@@ -67,7 +67,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -82,11 +82,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "769 5539\n"
+        "100000 0\n"
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 10
     },
     {
      "cell_type": "heading",
@@ -105,7 +105,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 6
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -116,7 +116,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -131,11 +131,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "769 5974\n"
+        "100000 354238\n"
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 13
     },
     {
      "cell_type": "heading",
@@ -154,7 +154,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 9
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
@@ -165,7 +165,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 10
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -180,11 +180,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "769 13712\n"
+        "100000 693776\n"
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 16
     },
     {
      "cell_type": "heading",
