backbone graph file benchmark added
--HG--
branch : sparsification

--- a/Doc/Notebooks/Backbones.ipynb
+++ b/Doc/Notebooks/Backbones.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:5e8ffb24942f3dcd44795d11b607589ebfad7e1f7ef5c5add0ed141c19cf7922"
+  "signature": "sha256:e4c43bba8071d43f141a130b58d2af5dace2a06ce8121315b8a40be938d07310"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -17,18 +17,18 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "G = readGraph(\"../../../ComplexNetworkBackbones/evaluation/input/LFR-100000.graph\", Format.METIS)"
+      "G = readGraph(\"../../../ComplexNetworkBackbones/evaluation/input/Yale4.graphml\", Format.GraphML)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -43,11 +43,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "100000 980295\n"
+        "8578 405450\n"
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 6
     },
     {
      "cell_type": "heading",
