Lots of documentation
--HG--
branch : Dev

--- a/Doc/Notebooks/SpectralCentrality.ipynb
+++ b/Doc/Notebooks/SpectralCentrality.ipynb
@@ -40,7 +40,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "G = NetworKit.graphio.readGraph(\"../input/celegans_metabolic.graph\")"
+      "G = NetworKit.graphio.readGraph(\"../../input/celegans_metabolic.graph\")"
      ],
      "language": "python",
      "metadata": {},
@@ -147,14 +147,14 @@
        "prompt_number": 6,
        "text": [
         "[(185, 0.3586787763956071),\n",
-        " (407, 0.2420807643210619),\n",
-        " (146, 0.23956989544776153),\n",
-        " (144, 0.20553600559712537),\n",
+        " (407, 0.24208076432106193),\n",
+        " (146, 0.23956989544776158),\n",
+        " (144, 0.20553600559712543),\n",
         " (204, 0.177385111798723),\n",
-        " (230, 0.16792666595381617),\n",
-        " (152, 0.1548329695474894),\n",
-        " (227, 0.1491114355708722),\n",
-        " (226, 0.1491114355708722),\n",
+        " (230, 0.16792666595381622),\n",
+        " (152, 0.15483296954748946),\n",
+        " (227, 0.14911143557087225),\n",
+        " (226, 0.14911143557087225),\n",
         " (425, 0.13360064298606755)]"
        ]
       }
@@ -187,7 +187,7 @@
         "[(185, 0.08967935808573081),\n",
         " (146, 0.03629366353976929),\n",
         " (144, 0.031391049006808995),\n",
-        " (407, 0.029966678067660842),\n",
+        " (407, 0.029966678067660846),\n",
         " (227, 0.02119029305575018),\n",
         " (226, 0.02119029305575018),\n",
         " (425, 0.01990720675472069),\n",
@@ -222,16 +222,16 @@
        "output_type": "pyout",
        "prompt_number": 8,
        "text": [
-        "[(185, 0.57969868523261647),\n",
-        " (146, 0.23066656271510738),\n",
-        " (351, 0.21628413395626683),\n",
-        " (407, 0.21460542506626207),\n",
-        " (144, 0.18890292106322537),\n",
-        " (227, 0.1864947362518129),\n",
-        " (226, 0.18365293338896607),\n",
-        " (154, 0.17205038099379336),\n",
-        " (152, 0.14806676688982734),\n",
-        " (425, 0.13573514873786399)]"
+        "[(185, 0.054799391769678192),\n",
+        " (146, 0.021805099201351458),\n",
+        " (351, 0.02044551642458713),\n",
+        " (407, 0.020286826697537466),\n",
+        " (144, 0.017857147931302303),\n",
+        " (227, 0.017629500247607063),\n",
+        " (226, 0.01736086229416605),\n",
+        " (154, 0.01626406350812748),\n",
+        " (152, 0.013996872812656734),\n",
+        " (425, 0.012831154843169967)]"
        ]
       }
      ],
@@ -241,30 +241,8 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "If everything went well, these should look similar, too. You might notice a rather large constant factor between the centrality values. This seems to be because of a bug in the normalization of the C++ backend. Let's take a look at the magnitudes of the vectors (which should be 1 after normalization):"
+      "If everything went well, these should look similar, too."
      ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "mag = lambda x: math.sqrt(sum((i[1])**2 for i in x))\n",
-      "print(\"C++ magnitude: {}\".format(mag(pageRank.ranking())))\n",
-      "print(\"Python magnitude: {}\".format(mag(nativePageRank.ranking())))"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "C++ magnitude: 0.12586531423535924\n",
-        "Python magnitude: 1.0000000000000002\n"
-       ]
-      }
-     ],
-     "prompt_number": 9
     },
     {
      "cell_type": "markdown",
@@ -288,8 +266,8 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Average relative difference: 0.08411651551542425\n",
-        "Maximum relative difference: 1.355588906163185\n"
+        "Average relative difference: 0.08411651551542432\n",
+        "Maximum relative difference: 1.3555889061631854\n"
        ]
       }
      ],
@@ -319,7 +297,8 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 10
     }
    ],
    "metadata": {}
