--- a/Doc/Notebooks/SpectralCentralityWithPandas.ipynb
+++ b/Doc/Notebooks/SpectralCentralityWithPandas.ipynb
@@ -30,18 +30,18 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 10
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "G = NetworKit.graphio.readGraph(\"../input/celegans_metabolic.graph\")"
+      "G = NetworKit.graphio.readGraph(\"../../input/celegans_metabolic.graph\")"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 11
+     "prompt_number": 18
     },
     {
      "cell_type": "markdown",
@@ -119,7 +119,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 12,
+       "prompt_number": 19,
        "text": [
         "   Python EVZ\n",
         "0    0.038891\n",
@@ -135,7 +135,7 @@
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 19
     },
     {
      "cell_type": "markdown",
@@ -160,7 +160,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 13
+     "prompt_number": 20
     },
     {
      "cell_type": "markdown",
@@ -198,17 +198,17 @@
         "    </tr>\n",
         "    <tr>\n",
         "      <th>1</th>\n",
-        "      <td>  (407, 0.2420807643210619)</td>\n",
+        "      <td> (407, 0.24208076432106193)</td>\n",
         "      <td> (146, 0.255898448442)</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>2</th>\n",
-        "      <td> (146, 0.23956989544776153)</td>\n",
+        "      <td> (146, 0.23956989544776158)</td>\n",
         "      <td> (407, 0.252999927439)</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>3</th>\n",
-        "      <td> (144, 0.20553600559712537)</td>\n",
+        "      <td> (144, 0.20553600559712543)</td>\n",
         "      <td> (144, 0.219520348228)</td>\n",
         "    </tr>\n",
         "    <tr>\n",
@@ -218,22 +218,22 @@
         "    </tr>\n",
         "    <tr>\n",
         "      <th>5</th>\n",
-        "      <td> (230, 0.16792666595381617)</td>\n",
+        "      <td> (230, 0.16792666595381622)</td>\n",
         "      <td> (230, 0.170370221466)</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>6</th>\n",
-        "      <td>  (152, 0.1548329695474894)</td>\n",
+        "      <td> (152, 0.15483296954748946)</td>\n",
         "      <td> (226, 0.153439766232)</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>7</th>\n",
-        "      <td>  (227, 0.1491114355708722)</td>\n",
+        "      <td> (227, 0.14911143557087225)</td>\n",
         "      <td> (227, 0.153439766232)</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>8</th>\n",
-        "      <td>  (226, 0.1491114355708722)</td>\n",
+        "      <td> (226, 0.14911143557087225)</td>\n",
         "      <td> (152, 0.152560173456)</td>\n",
         "    </tr>\n",
         "    <tr>\n",
@@ -247,23 +247,23 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 14,
+       "prompt_number": 21,
        "text": [
         "                      C++ EVZ             Python EVZ\n",
         "0   (185, 0.3586787763956071)  (185, 0.379989203942)\n",
-        "1   (407, 0.2420807643210619)  (146, 0.255898448442)\n",
-        "2  (146, 0.23956989544776153)  (407, 0.252999927439)\n",
-        "3  (144, 0.20553600559712537)  (144, 0.219520348228)\n",
+        "1  (407, 0.24208076432106193)  (146, 0.255898448442)\n",
+        "2  (146, 0.23956989544776158)  (407, 0.252999927439)\n",
+        "3  (144, 0.20553600559712543)  (144, 0.219520348228)\n",
         "4    (204, 0.177385111798723)  (204, 0.180141731247)\n",
-        "5  (230, 0.16792666595381617)  (230, 0.170370221466)\n",
-        "6   (152, 0.1548329695474894)  (226, 0.153439766232)\n",
-        "7   (227, 0.1491114355708722)  (227, 0.153439766232)\n",
-        "8   (226, 0.1491114355708722)  (152, 0.152560173456)\n",
+        "5  (230, 0.16792666595381622)  (230, 0.170370221466)\n",
+        "6  (152, 0.15483296954748946)  (226, 0.153439766232)\n",
+        "7  (227, 0.14911143557087225)  (227, 0.153439766232)\n",
+        "8  (226, 0.14911143557087225)  (152, 0.152560173456)\n",
         "9  (425, 0.13360064298606755)  (425, 0.136202654583)"
        ]
       }
      ],
-     "prompt_number": 14
+     "prompt_number": 21
     },
     {
      "cell_type": "markdown",
@@ -297,52 +297,52 @@
         "    <tr>\n",
         "      <th>0</th>\n",
         "      <td> (185, 0.057548689143122875)</td>\n",
-        "      <td> (185, 0.562733076611)</td>\n",
+        "      <td>  (185, 0.054780413341)</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>1</th>\n",
         "      <td>  (146, 0.02874524532245119)</td>\n",
-        "      <td> (146, 0.298785343709)</td>\n",
+        "      <td> (146, 0.0298717996041)</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>2</th>\n",
         "      <td>  (407, 0.02528870954478069)</td>\n",
-        "      <td> (144, 0.256797574956)</td>\n",
+        "      <td> (407, 0.0256387311424)</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>3</th>\n",
         "      <td>  (144, 0.02435921673354546)</td>\n",
-        "      <td> (407, 0.243189068514)</td>\n",
+        "      <td> (144, 0.0250909694548)</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>4</th>\n",
         "      <td> (226, 0.017416341016188205)</td>\n",
-        "      <td> (227, 0.195717909276)</td>\n",
+        "      <td> (226, 0.0191404002498)</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>5</th>\n",
         "      <td> (227, 0.017416341016188205)</td>\n",
-        "      <td> (226, 0.190980394906)</td>\n",
+        "      <td> (227, 0.0189128620295)</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>6</th>\n",
         "      <td> (152, 0.015082439274723199)</td>\n",
-        "      <td> (204, 0.162178159119)</td>\n",
+        "      <td> (152, 0.0188552290322)</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>7</th>\n",
         "      <td> (425, 0.014952542568116085)</td>\n",
-        "      <td> (152, 0.154677939335)</td>\n",
+        "      <td> (229, 0.0148784813029)</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>8</th>\n",
         "      <td> (204, 0.014704749200614793)</td>\n",
-        "      <td> (425, 0.152864599797)</td>\n",
+        "      <td> (230, 0.0147772703602)</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>9</th>\n",
         "      <td> (230, 0.014234930427413514)</td>\n",
-        "      <td> (230, 0.146798611514)</td>\n",
+        "      <td> (204, 0.0145498018879)</td>\n",
         "    </tr>\n",
         "  </tbody>\n",
         "</table>\n",
@@ -350,52 +350,30 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 15,
+       "prompt_number": 22,
        "text": [
-        "                  C++ PageRank        Python PageRank\n",
-        "0  (185, 0.057548689143122875)  (185, 0.562733076611)\n",
-        "1   (146, 0.02874524532245119)  (146, 0.298785343709)\n",
-        "2   (407, 0.02528870954478069)  (144, 0.256797574956)\n",
-        "3   (144, 0.02435921673354546)  (407, 0.243189068514)\n",
-        "4  (226, 0.017416341016188205)  (227, 0.195717909276)\n",
-        "5  (227, 0.017416341016188205)  (226, 0.190980394906)\n",
-        "6  (152, 0.015082439274723199)  (204, 0.162178159119)\n",
-        "7  (425, 0.014952542568116085)  (152, 0.154677939335)\n",
-        "8  (204, 0.014704749200614793)  (425, 0.152864599797)\n",
-        "9  (230, 0.014234930427413514)  (230, 0.146798611514)"
+        "                  C++ PageRank         Python PageRank\n",
+        "0  (185, 0.057548689143122875)   (185, 0.054780413341)\n",
+        "1   (146, 0.02874524532245119)  (146, 0.0298717996041)\n",
+        "2   (407, 0.02528870954478069)  (407, 0.0256387311424)\n",
+        "3   (144, 0.02435921673354546)  (144, 0.0250909694548)\n",
+        "4  (226, 0.017416341016188205)  (226, 0.0191404002498)\n",
+        "5  (227, 0.017416341016188205)  (227, 0.0189128620295)\n",
+        "6  (152, 0.015082439274723199)  (152, 0.0188552290322)\n",
+        "7  (425, 0.014952542568116085)  (229, 0.0148784813029)\n",
+        "8  (204, 0.014704749200614793)  (230, 0.0147772703602)\n",
+        "9  (230, 0.014234930427413514)  (204, 0.0145498018879)"
        ]
       }
      ],
-     "prompt_number": 15
+     "prompt_number": 22
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "If everything went well, these should look similar, too. You might notice a rather large constant factor between the centrality values. This seems to be because of a bug in the normalization of the C++ backend. Let's take a look at the magnitudes of the vectors (which should be 1 after normalization):"
+      "If everything went well, these should look similar, too."
      ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "mag = lambda x: math.sqrt(sum((i[1])**2 for i in x))\n",
-      "print(\"C++ magnitude: {}\".format(mag(pageRank.ranking())))\n",
-      "print(\"Python magnitude: {}\".format(mag(pageRankNative.ranking())))"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "C++ magnitude: 0.09608001404919528\n",
-        "Python magnitude: 0.9999999999999998\n"
-       ]
-      }
-     ],
-     "prompt_number": 16
     },
     {
      "cell_type": "markdown",
@@ -428,54 +406,54 @@
         "  </thead>\n",
         "  <tbody>\n",
         "    <tr>\n",
-        "      <th>411</th>\n",
-        "      <td> 0.027216</td>\n",
-        "      <td> 0.025780</td>\n",
+        "      <th>307</th>\n",
+        "      <td> 0.019807</td>\n",
+        "      <td> 0.017933</td>\n",
         "    </tr>\n",
         "    <tr>\n",
-        "      <th>156</th>\n",
-        "      <td> 0.046471</td>\n",
-        "      <td> 0.043589</td>\n",
+        "      <th>126</th>\n",
+        "      <td> 0.036781</td>\n",
+        "      <td> 0.035682</td>\n",
         "    </tr>\n",
         "    <tr>\n",
-        "      <th>255</th>\n",
-        "      <td> 0.017720</td>\n",
-        "      <td> 0.015704</td>\n",
+        "      <th>14 </th>\n",
+        "      <td> 0.000371</td>\n",
+        "      <td> 0.000181</td>\n",
         "    </tr>\n",
         "    <tr>\n",
-        "      <th>314</th>\n",
-        "      <td> 0.018252</td>\n",
-        "      <td> 0.016308</td>\n",
+        "      <th>41 </th>\n",
+        "      <td> 0.035883</td>\n",
+        "      <td> 0.032884</td>\n",
         "    </tr>\n",
         "    <tr>\n",
-        "      <th>104</th>\n",
-        "      <td> 0.022491</td>\n",
-        "      <td> 0.021625</td>\n",
+        "      <th>124</th>\n",
+        "      <td> 0.064294</td>\n",
+        "      <td> 0.062267</td>\n",
         "    </tr>\n",
         "    <tr>\n",
-        "      <th>274</th>\n",
-        "      <td> 0.011137</td>\n",
-        "      <td> 0.011553</td>\n",
+        "      <th>151</th>\n",
+        "      <td> 0.025863</td>\n",
+        "      <td> 0.025550</td>\n",
         "    </tr>\n",
         "    <tr>\n",
-        "      <th>364</th>\n",
-        "      <td> 0.045979</td>\n",
-        "      <td> 0.044784</td>\n",
+        "      <th>445</th>\n",
+        "      <td> 0.018454</td>\n",
+        "      <td> 0.016446</td>\n",
         "    </tr>\n",
         "    <tr>\n",
-        "      <th>259</th>\n",
-        "      <td> 0.017624</td>\n",
-        "      <td> 0.015632</td>\n",
+        "      <th>232</th>\n",
+        "      <td> 0.060748</td>\n",
+        "      <td> 0.059159</td>\n",
         "    </tr>\n",
         "    <tr>\n",
-        "      <th>392</th>\n",
-        "      <td> 0.018906</td>\n",
-        "      <td> 0.017157</td>\n",
+        "      <th>449</th>\n",
+        "      <td> 0.018983</td>\n",
+        "      <td> 0.017035</td>\n",
         "    </tr>\n",
         "    <tr>\n",
-        "      <th>433</th>\n",
-        "      <td> 0.012032</td>\n",
-        "      <td> 0.011658</td>\n",
+        "      <th>371</th>\n",
+        "      <td> 0.000595</td>\n",
+        "      <td> 0.000653</td>\n",
         "    </tr>\n",
         "  </tbody>\n",
         "</table>\n",
@@ -483,23 +461,23 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 17,
+       "prompt_number": 23,
        "text": [
         "      C++ EVZ  Python EVZ\n",
-        "411  0.027216    0.025780\n",
-        "156  0.046471    0.043589\n",
-        "255  0.017720    0.015704\n",
-        "314  0.018252    0.016308\n",
-        "104  0.022491    0.021625\n",
-        "274  0.011137    0.011553\n",
-        "364  0.045979    0.044784\n",
-        "259  0.017624    0.015632\n",
-        "392  0.018906    0.017157\n",
-        "433  0.012032    0.011658"
+        "307  0.019807    0.017933\n",
+        "126  0.036781    0.035682\n",
+        "14   0.000371    0.000181\n",
+        "41   0.035883    0.032884\n",
+        "124  0.064294    0.062267\n",
+        "151  0.025863    0.025550\n",
+        "445  0.018454    0.016446\n",
+        "232  0.060748    0.059159\n",
+        "449  0.018983    0.017035\n",
+        "371  0.000595    0.000653"
        ]
       }
      ],
-     "prompt_number": 17
+     "prompt_number": 23
     },
     {
      "cell_type": "markdown",
@@ -523,12 +501,12 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Average relative difference: 0.08411651551541888\n",
-        "Maximum relative difference: 1.3555889061619548\n"
+        "Average relative difference: 0.08411651551542029\n",
+        "Maximum relative difference: 1.3555889061632898\n"
        ]
       }
      ],
-     "prompt_number": 18
+     "prompt_number": 24
     },
     {
      "cell_type": "code",
@@ -537,7 +515,34 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 18
+     "prompt_number": 24
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 24
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 24
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 24
     }
    ],
    "metadata": {}
