Renaming "PythonNative" -> "SciPy"
--HG--
branch : Dev

--- a/Doc/Notebooks/SpectralCentrality.ipynb
+++ b/Doc/Notebooks/SpectralCentrality.ipynb
@@ -25,16 +25,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Update to Python >=3.4 recommended - support for < 3.4 may be discontinued in the future\n"
-       ]
-      }
-     ],
-     "prompt_number": 2
+     "outputs": [],
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -45,7 +37,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 16
     },
     {
      "cell_type": "markdown",
@@ -58,9 +50,9 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "evzNative = NetworKit.centrality.PythonNativeEVZ(G, normalized=True)\n",
-      "evzNative.run()\n",
-      "evzNative.scores()[:10]"
+      "evzSciPy = NetworKit.centrality.SciPyEVZ(G, normalized=True)\n",
+      "evzSciPy.run()\n",
+      "evzSciPy.scores()[:10]"
      ],
      "language": "python",
      "metadata": {},
@@ -68,22 +60,22 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 4,
+       "prompt_number": 17,
        "text": [
-        "[0.038890947542671417,\n",
-        " 0.025204387816348928,\n",
-        " 0.030099862584687796,\n",
-        " 0.023008066197884643,\n",
-        " 0.015014306929265246,\n",
-        " 0.047450338825435673,\n",
-        " 0.03877379800819393,\n",
-        " 0.00018201165419890557,\n",
-        " 0.0043027361546468185,\n",
-        " 0.019820501996514393]"
+        "[0.038890947542671389,\n",
+        " 0.025204387816348917,\n",
+        " 0.030099862584687765,\n",
+        " 0.02300806619788465,\n",
+        " 0.015014306929265284,\n",
+        " 0.047450338825435624,\n",
+        " 0.038773798008193916,\n",
+        " 0.00018201165419890047,\n",
+        " 0.0043027361546468367,\n",
+        " 0.019820501996514448]"
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 17
     },
     {
      "cell_type": "markdown",
@@ -96,7 +88,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "evzNative.ranking()[:10]"
+      "evzSciPy.ranking()[:10]"
      ],
      "language": "python",
      "metadata": {},
@@ -104,22 +96,22 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 5,
+       "prompt_number": 18,
        "text": [
-        "[(185, 0.37998920394223168),\n",
-        " (146, 0.25589844844192655),\n",
-        " (407, 0.25299992743917177),\n",
-        " (144, 0.21952034822779035),\n",
-        " (204, 0.18014173124747021),\n",
-        " (230, 0.17037022146635697),\n",
-        " (227, 0.15343976623211927),\n",
-        " (226, 0.15343976623211925),\n",
-        " (152, 0.15256017345576342),\n",
-        " (425, 0.13620265458341316)]"
+        "[(185, 0.37998920394223173),\n",
+        " (146, 0.25589844844192616),\n",
+        " (407, 0.25299992743917193),\n",
+        " (144, 0.21952034822779018),\n",
+        " (204, 0.18014173124747007),\n",
+        " (230, 0.17037022146635705),\n",
+        " (226, 0.15343976623211911),\n",
+        " (227, 0.15343976623211911),\n",
+        " (152, 0.15256017345576336),\n",
+        " (425, 0.13620265458341302)]"
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 18
     },
     {
      "cell_type": "markdown",
@@ -144,7 +136,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 6,
+       "prompt_number": 19,
        "text": [
         "[(185, 0.3586787763956071),\n",
         " (407, 0.24208076432106193),\n",
@@ -159,7 +151,7 @@
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 19
     },
     {
      "cell_type": "markdown",
@@ -182,7 +174,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 7,
+       "prompt_number": 20,
        "text": [
         "[(185, 0.08967935808573081),\n",
         " (146, 0.03629366353976929),\n",
@@ -197,7 +189,7 @@
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 20
     },
     {
      "cell_type": "markdown",
@@ -210,9 +202,9 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "nativePageRank = NetworKit.centrality.PythonNativePageRank(G, 0.95, normalized=True)\n",
-      "nativePageRank.run()\n",
-      "nativePageRank.ranking()[:10]"
+      "SciPyPageRank = NetworKit.centrality.SciPyPageRank(G, 0.95, normalized=True)\n",
+      "SciPyPageRank.run()\n",
+      "SciPyPageRank.ranking()[:10]"
      ],
      "language": "python",
      "metadata": {},
@@ -220,22 +212,22 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 8,
+       "prompt_number": 21,
        "text": [
-        "[(185, 0.054799391769678192),\n",
-        " (146, 0.021805099201351458),\n",
-        " (351, 0.02044551642458713),\n",
-        " (407, 0.020286826697537466),\n",
-        " (144, 0.017857147931302303),\n",
-        " (227, 0.017629500247607063),\n",
-        " (226, 0.01736086229416605),\n",
-        " (154, 0.01626406350812748),\n",
-        " (152, 0.013996872812656734),\n",
-        " (425, 0.012831154843169967)]"
+        "[(185, 0.054780413341042854),\n",
+        " (146, 0.029871799604127159),\n",
+        " (407, 0.025638731142372653),\n",
+        " (144, 0.025090969454838147),\n",
+        " (226, 0.01914040024980283),\n",
+        " (227, 0.018912862029472285),\n",
+        " (152, 0.018855229032163981),\n",
+        " (229, 0.01487848130291471),\n",
+        " (230, 0.014777270360179907),\n",
+        " (204, 0.014549801887864406)]"
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 21
     },
     {
      "cell_type": "markdown",
@@ -255,7 +247,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "differences = [(max(x[0], x[1]) / min(x[0], x[1])) - 1 for x in zip(evz.scores(), evzNative.scores())]\n",
+      "differences = [(max(x[0], x[1]) / min(x[0], x[1])) - 1 for x in zip(evz.scores(), evzSciPy.scores())]\n",
       "print(\"Average relative difference: {}\".format(sum(differences) / len(differences)))\n",
       "print(\"Maximum relative difference: {}\".format(max(differences)))"
      ],
@@ -266,12 +258,12 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Average relative difference: 0.08411651551542432\n",
-        "Maximum relative difference: 1.3555889061631854\n"
+        "Average relative difference: 0.08411651551542029\n",
+        "Maximum relative difference: 1.3555889061632898\n"
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 22
     },
     {
      "cell_type": "code",
@@ -280,7 +272,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 10
+     "prompt_number": 22
     },
     {
      "cell_type": "code",
@@ -289,7 +281,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 10
+     "prompt_number": 22
     },
     {
      "cell_type": "code",
@@ -298,7 +290,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 10
+     "prompt_number": 22
     }
    ],
    "metadata": {}
