--- a/Doc/Notebooks/SpectralCentralityWithPandas.ipynb
+++ b/Doc/Notebooks/SpectralCentralityWithPandas.ipynb
@@ -30,7 +30,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 17
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -41,7 +41,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 18
+     "prompt_number": 9
     },
     {
      "cell_type": "markdown",
@@ -54,9 +54,9 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "evzNative = NetworKit.centrality.PythonNativeEVZ(G, normalized=True)\n",
-      "evzNative.run()\n",
-      "scoresTableEVZ = pd.DataFrame({\"Python EVZ\": evzNative.scores()[:10]})\n",
+      "evzSciPy = NetworKit.centrality.SciPyEVZ(G, normalized=True)\n",
+      "evzSciPy.run()\n",
+      "scoresTableEVZ = pd.DataFrame({\"Python EVZ\": evzSciPy.scores()[:10]})\n",
       "scoresTableEVZ"
      ],
      "language": "python",
@@ -119,7 +119,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 19,
+       "prompt_number": 10,
        "text": [
         "   Python EVZ\n",
         "0    0.038891\n",
@@ -135,7 +135,7 @@
        ]
       }
      ],
-     "prompt_number": 19
+     "prompt_number": 10
     },
     {
      "cell_type": "markdown",
@@ -154,13 +154,13 @@
       "pageRank = NetworKit.centrality.PageRank(G, 0.95)\n",
       "pageRank.run()\n",
       "\n",
-      "pageRankNative = NetworKit.centrality.PythonNativePageRank(G, 0.95, normalized=True)\n",
-      "pageRankNative.run()"
+      "pageRankSciPy = NetworKit.centrality.SciPyPageRank(G, 0.95, normalized=True)\n",
+      "pageRankSciPy.run()"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 20
+     "prompt_number": 11
     },
     {
      "cell_type": "markdown",
@@ -173,7 +173,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "rankTableEVZ = pd.DataFrame({\"Python EVZ\": evzNative.ranking()[:10], \"C++ EVZ\": evz.ranking()[:10]})\n",
+      "rankTableEVZ = pd.DataFrame({\"Python EVZ\": evzSciPy.ranking()[:10], \"C++ EVZ\": evz.ranking()[:10]})\n",
       "rankTableEVZ"
      ],
      "language": "python",
@@ -247,7 +247,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 21,
+       "prompt_number": 12,
        "text": [
         "                      C++ EVZ             Python EVZ\n",
         "0   (185, 0.3586787763956071)  (185, 0.379989203942)\n",
@@ -263,7 +263,7 @@
        ]
       }
      ],
-     "prompt_number": 21
+     "prompt_number": 12
     },
     {
      "cell_type": "markdown",
@@ -276,7 +276,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "rankTablePR = pd.DataFrame({\"Python PageRank\": pageRankNative.ranking()[:10], \"C++ PageRank\": pageRank.ranking()[:10]})\n",
+      "rankTablePR = pd.DataFrame({\"Python PageRank\": pageRankSciPy.ranking()[:10], \"C++ PageRank\": pageRank.ranking()[:10]})\n",
       "rankTablePR"
      ],
      "language": "python",
@@ -297,52 +297,52 @@
         "    <tr>\n",
         "      <th>0</th>\n",
         "      <td> (185, 0.057548689143122875)</td>\n",
-        "      <td>  (185, 0.054780413341)</td>\n",
+        "      <td> (185, 0.0569761023152)</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>1</th>\n",
         "      <td>  (146, 0.02874524532245119)</td>\n",
-        "      <td> (146, 0.0298717996041)</td>\n",
+        "      <td>  (146, 0.029930292902)</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>2</th>\n",
         "      <td>  (407, 0.02528870954478069)</td>\n",
-        "      <td> (407, 0.0256387311424)</td>\n",
+        "      <td> (407, 0.0265736334414)</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>3</th>\n",
         "      <td>  (144, 0.02435921673354546)</td>\n",
-        "      <td> (144, 0.0250909694548)</td>\n",
+        "      <td>  (144, 0.025430294678)</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>4</th>\n",
         "      <td> (226, 0.017416341016188205)</td>\n",
-        "      <td> (226, 0.0191404002498)</td>\n",
+        "      <td> (226, 0.0182512318608)</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>5</th>\n",
         "      <td> (227, 0.017416341016188205)</td>\n",
-        "      <td> (227, 0.0189128620295)</td>\n",
+        "      <td> (227, 0.0180643783643)</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>6</th>\n",
         "      <td> (152, 0.015082439274723199)</td>\n",
-        "      <td> (152, 0.0188552290322)</td>\n",
+        "      <td> (152, 0.0155190199417)</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>7</th>\n",
         "      <td> (425, 0.014952542568116085)</td>\n",
-        "      <td> (229, 0.0148784813029)</td>\n",
+        "      <td> (425, 0.0155140956156)</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>8</th>\n",
         "      <td> (204, 0.014704749200614793)</td>\n",
-        "      <td> (230, 0.0147772703602)</td>\n",
+        "      <td> (204, 0.0152943723885)</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>9</th>\n",
         "      <td> (230, 0.014234930427413514)</td>\n",
-        "      <td> (204, 0.0145498018879)</td>\n",
+        "      <td> (230, 0.0143970233572)</td>\n",
         "    </tr>\n",
         "  </tbody>\n",
         "</table>\n",
@@ -350,23 +350,23 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 22,
+       "prompt_number": 13,
        "text": [
         "                  C++ PageRank         Python PageRank\n",
-        "0  (185, 0.057548689143122875)   (185, 0.054780413341)\n",
-        "1   (146, 0.02874524532245119)  (146, 0.0298717996041)\n",
-        "2   (407, 0.02528870954478069)  (407, 0.0256387311424)\n",
-        "3   (144, 0.02435921673354546)  (144, 0.0250909694548)\n",
-        "4  (226, 0.017416341016188205)  (226, 0.0191404002498)\n",
-        "5  (227, 0.017416341016188205)  (227, 0.0189128620295)\n",
-        "6  (152, 0.015082439274723199)  (152, 0.0188552290322)\n",
-        "7  (425, 0.014952542568116085)  (229, 0.0148784813029)\n",
-        "8  (204, 0.014704749200614793)  (230, 0.0147772703602)\n",
-        "9  (230, 0.014234930427413514)  (204, 0.0145498018879)"
+        "0  (185, 0.057548689143122875)  (185, 0.0569761023152)\n",
+        "1   (146, 0.02874524532245119)   (146, 0.029930292902)\n",
+        "2   (407, 0.02528870954478069)  (407, 0.0265736334414)\n",
+        "3   (144, 0.02435921673354546)   (144, 0.025430294678)\n",
+        "4  (226, 0.017416341016188205)  (226, 0.0182512318608)\n",
+        "5  (227, 0.017416341016188205)  (227, 0.0180643783643)\n",
+        "6  (152, 0.015082439274723199)  (152, 0.0155190199417)\n",
+        "7  (425, 0.014952542568116085)  (425, 0.0155140956156)\n",
+        "8  (204, 0.014704749200614793)  (204, 0.0152943723885)\n",
+        "9  (230, 0.014234930427413514)  (230, 0.0143970233572)"
        ]
       }
      ],
-     "prompt_number": 22
+     "prompt_number": 13
     },
     {
      "cell_type": "markdown",
@@ -387,7 +387,7 @@
      "collapsed": false,
      "input": [
       "vertices = rd.sample(G.nodes(), 10)\n",
-      "randTableEVZ = pd.DataFrame({\"Python EVZ\": evzNative.scores(), \"C++ EVZ\": evz.scores()})\n",
+      "randTableEVZ = pd.DataFrame({\"Python EVZ\": evzSciPy.scores(), \"C++ EVZ\": evz.scores()})\n",
       "randTableEVZ.loc[vertices]"
      ],
      "language": "python",
@@ -406,54 +406,54 @@
         "  </thead>\n",
         "  <tbody>\n",
         "    <tr>\n",
-        "      <th>307</th>\n",
-        "      <td> 0.019807</td>\n",
-        "      <td> 0.017933</td>\n",
+        "      <th>176</th>\n",
+        "      <td> 0.011059</td>\n",
+        "      <td> 0.010574</td>\n",
         "    </tr>\n",
         "    <tr>\n",
-        "      <th>126</th>\n",
-        "      <td> 0.036781</td>\n",
-        "      <td> 0.035682</td>\n",
+        "      <th>132</th>\n",
+        "      <td> 0.025643</td>\n",
+        "      <td> 0.025086</td>\n",
         "    </tr>\n",
         "    <tr>\n",
-        "      <th>14 </th>\n",
-        "      <td> 0.000371</td>\n",
-        "      <td> 0.000181</td>\n",
+        "      <th>54 </th>\n",
+        "      <td> 0.007948</td>\n",
+        "      <td> 0.007970</td>\n",
         "    </tr>\n",
         "    <tr>\n",
-        "      <th>41 </th>\n",
-        "      <td> 0.035883</td>\n",
-        "      <td> 0.032884</td>\n",
+        "      <th>158</th>\n",
+        "      <td> 0.053888</td>\n",
+        "      <td> 0.051367</td>\n",
         "    </tr>\n",
         "    <tr>\n",
-        "      <th>124</th>\n",
-        "      <td> 0.064294</td>\n",
-        "      <td> 0.062267</td>\n",
+        "      <th>43 </th>\n",
+        "      <td> 0.024558</td>\n",
+        "      <td> 0.023160</td>\n",
         "    </tr>\n",
         "    <tr>\n",
-        "      <th>151</th>\n",
-        "      <td> 0.025863</td>\n",
-        "      <td> 0.025550</td>\n",
+        "      <th>348</th>\n",
+        "      <td> 0.043816</td>\n",
+        "      <td> 0.042881</td>\n",
         "    </tr>\n",
         "    <tr>\n",
-        "      <th>445</th>\n",
-        "      <td> 0.018454</td>\n",
-        "      <td> 0.016446</td>\n",
+        "      <th>131</th>\n",
+        "      <td> 0.024375</td>\n",
+        "      <td> 0.022909</td>\n",
         "    </tr>\n",
         "    <tr>\n",
-        "      <th>232</th>\n",
-        "      <td> 0.060748</td>\n",
-        "      <td> 0.059159</td>\n",
+        "      <th>224</th>\n",
+        "      <td> 0.000085</td>\n",
+        "      <td> 0.000036</td>\n",
         "    </tr>\n",
         "    <tr>\n",
-        "      <th>449</th>\n",
-        "      <td> 0.018983</td>\n",
-        "      <td> 0.017035</td>\n",
+        "      <th>231</th>\n",
+        "      <td> 0.000813</td>\n",
+        "      <td> 0.000867</td>\n",
         "    </tr>\n",
         "    <tr>\n",
-        "      <th>371</th>\n",
-        "      <td> 0.000595</td>\n",
-        "      <td> 0.000653</td>\n",
+        "      <th>5  </th>\n",
+        "      <td> 0.047535</td>\n",
+        "      <td> 0.047450</td>\n",
         "    </tr>\n",
         "  </tbody>\n",
         "</table>\n",
@@ -461,23 +461,23 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 23,
+       "prompt_number": 14,
        "text": [
         "      C++ EVZ  Python EVZ\n",
-        "307  0.019807    0.017933\n",
-        "126  0.036781    0.035682\n",
-        "14   0.000371    0.000181\n",
-        "41   0.035883    0.032884\n",
-        "124  0.064294    0.062267\n",
-        "151  0.025863    0.025550\n",
-        "445  0.018454    0.016446\n",
-        "232  0.060748    0.059159\n",
-        "449  0.018983    0.017035\n",
-        "371  0.000595    0.000653"
+        "176  0.011059    0.010574\n",
+        "132  0.025643    0.025086\n",
+        "54   0.007948    0.007970\n",
+        "158  0.053888    0.051367\n",
+        "43   0.024558    0.023160\n",
+        "348  0.043816    0.042881\n",
+        "131  0.024375    0.022909\n",
+        "224  0.000085    0.000036\n",
+        "231  0.000813    0.000867\n",
+        "5    0.047535    0.047450"
        ]
       }
      ],
-     "prompt_number": 23
+     "prompt_number": 14
     },
     {
      "cell_type": "markdown",
@@ -490,7 +490,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "differences = [(max(x[0], x[1]) / min(x[0], x[1])) - 1 for x in zip(evz.scores(), evzNative.scores())]\n",
+      "differences = [(max(x[0], x[1]) / min(x[0], x[1])) - 1 for x in zip(evz.scores(), evzSciPy.scores())]\n",
       "print(\"Average relative difference: {}\".format(sum(differences) / len(differences)))\n",
       "print(\"Maximum relative difference: {}\".format(max(differences)))"
      ],
@@ -501,12 +501,12 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Average relative difference: 0.08411651551542029\n",
-        "Maximum relative difference: 1.3555889061632898\n"
+        "Average relative difference: 0.08411651551542072\n",
+        "Maximum relative difference: 1.355588906162672\n"
        ]
       }
      ],
-     "prompt_number": 24
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -515,7 +515,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 24
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -524,7 +524,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 24
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -533,7 +533,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 24
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -542,7 +542,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 24
+     "prompt_number": 15
     }
    ],
    "metadata": {}
