Skip parameterization of backbone algorithms when not neccessary
--HG--
branch : sparsification

--- a/Doc/Notebooks/BackboneEvaluation.ipynb
+++ b/Doc/Notebooks/BackboneEvaluation.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:b02eef31dd837c4b016f3a50f61a95cef072b3b8810d858cfc1298388957e771"
+  "signature": "sha256:b7235b596acc16f6386c529bc40c61cc10f4711822d674d2f1119b967275f63d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -54,7 +54,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "conn = sqlite3.connect('../../../ComplexNetworkBackbones/evaluation/output/backbones.db')\n",
+      "conn = sqlite3.connect('../../scripts/BackboneEvaluation/output/backbones.db')\n",
       "c = conn.cursor()"
      ],
      "language": "python",
@@ -190,11 +190,11 @@
      "collapsed": false,
      "input": [
       "stat_by_graphs(c, \n",
-      "               \"runningTime\", \n",
-      "               [\"Original\", \"SBNP 0.9\", \"SBP 0.9\", \"LSB 0.9\", \"SMB 0.9\"], \n",
-      "               \"running time, edge ratio 0.9\",\n",
+      "               \"clusteringCoefficient\", \n",
+      "               [\"Original\", \"SBNP 0.9\", \"SBP 0.9\", \"LSB 0.9\", \"SMB 0.9\", \"R 0.9\"], \n",
+      "               \"clustering coefficient, edge ratio 0.9\",\n",
       "               \"Graph\",\n",
-      "               \"running time (s)\",\n",
+      "               \"clustering coefficient\",\n",
       "               \"cc_1 ASC\")"
      ],
      "language": "python",
