Significant performance improvement in gephi streaming by sending json messages in bulk
--HG--
branch : edgeids

--- a/Doc/Notebooks/GephiStreaming_UserGuide.ipynb
+++ b/Doc/Notebooks/GephiStreaming_UserGuide.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:be4b1a0f5d62af49c429009c572ea8a63f46d3af9664447ea192347cbb1e46ba"
+  "signature": "sha256:584740af3c1b61bb0921bb0f9d7c54d7f56bf2e3fbae969da953d6bc9c6803c7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -17,7 +17,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 16
     },
     {
      "cell_type": "heading",
@@ -68,12 +68,13 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "G = generators.ErdosRenyiGenerator(300, 0.2).generate()"
+      "G = generators.ErdosRenyiGenerator(300, 0.2).generate()\n",
+      "G.addEdge(0, 1) #We want to make sure this specific edge exists, for usage in an example later."
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 17
     },
     {
      "cell_type": "markdown",
@@ -92,7 +93,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 18
     },
     {
      "cell_type": "heading",
@@ -122,19 +123,19 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "PLM(balanced,,parallel coarsening) detected communities in 0.22378015518188477 [s]\n",
+        "PLM(balanced,,parallel coarsening) detected communities in 0.217146635055542 [s]\n",
         "solution properties:\n",
         "-------------------  ----------\n",
-        "# communities         7\n",
-        "min community size   17\n",
-        "max community size   65\n",
-        "avg. community size  42.8571\n",
-        "modularity            0.0986376\n",
+        "# communities         4\n",
+        "min community size   64\n",
+        "max community size   89\n",
+        "avg. community size  75\n",
+        "modularity            0.0848164\n",
         "-------------------  ----------\n"
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 19
     },
     {
      "cell_type": "code",
@@ -145,7 +146,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 20
     },
     {
      "cell_type": "markdown",
@@ -173,14 +174,13 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "G.addEdge(0, 1)    #We want to make sure this specific edge exists.\n",
       "edgeAttribute = [2*x for x in range(0, G.upperEdgeIdBound())]\n",
       "client.exportEdgeValues(G, edgeAttribute, \"myEdgeAttribute\")"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 10
+     "prompt_number": 21
     },
     {
      "cell_type": "markdown",
@@ -199,7 +199,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 11
+     "prompt_number": 22
     },
     {
      "cell_type": "heading",
