statistics: closer investigations...
--HG--
branch : sparsification

--- a/Doc/Notebooks/BackboneStatistics.ipynb
+++ b/Doc/Notebooks/BackboneStatistics.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:a756ec0fa19ed9bff6d2bda6db888a976b5b64b03be4265383a67a8a729c4b58"
+  "signature": "sha256:0fc8d32bf43675b1aa1090f46470edb2f4134699f84d55498d350bf19d3dc3f4"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -31,7 +31,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 162
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -66,12 +66,13 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 163
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "#Returns a tuple (edgeRatios, values) for the given combination of propery, graph and algorithm.\n",
       "def getPropertyData(prop, graph, algorithm):\n",
       "    query = \"SELECT edgeRatio, \" + prop\n",
       "    query += \" FROM properties\"\n",
@@ -103,27 +104,17 @@
       "        plt.tight_layout(pad=1)\n",
       "        plots.append(plot)\n",
       "        \n",
-      "        #Interpolation\n",
-      "        #if len(x) > 1:\n",
-      "        #    interp = interp1d(x, y, kind='linear')\n",
-      "        #    xi = np.linspace(x[0], x[-1], 50)\n",
-      "        #    plt.plot(xi, interp(xi), color=colors[cIndex % len(colors)], ls=\"--\", marker='')\n",
-      "        \n",
       "        cIndex += 1\n",
       "    \n",
       "    plt.title(prop + \" \" + (g if fixed=='Graph' else a))\n",
       "    plt.xlabel(\"edge ratio\")\n",
       "    plt.ylabel(prop)\n",
-      "    return plots\n",
-      "    #plt.savefig('/home/gerd/workspace/ComplexNetworkBackbones/figures/' + re.sub(r'\\W+', '_', title) + '.pdf', bbox_inches='tight')\n",
-      "    \n",
-      "    \n",
-      "    "
+      "    return plots"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 164
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -136,7 +127,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 165
+     "prompt_number": 5
     },
     {
      "cell_type": "heading",
@@ -172,7 +163,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 166
+     "prompt_number": 6
     },
     {
      "cell_type": "heading",
@@ -641,13 +632,105 @@
      "prompt_number": 180
     },
     {
+     "cell_type": "heading",
+     "level": 6,
+     "metadata": {},
+     "source": [
+      "Closer investigations"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Why is the nmi of some graphs greater than zero for the original graph?"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "gc = gephi.streaming.GephiStreamingClient()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 12
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "G = readGraph(\"../../scripts/BackboneEvaluation/input/Tennessee95.graphml\", Format.GraphML)\n",
+      "G.indexEdges()\n",
+      "c1 = community.detectCommunities(G)\n",
+      "c2 = community.detectCommunities(G)\n",
+      "\n",
+      "_nmi = community.NMIDistance()\n",
+      "nmi = _nmi.getDissimilarity(G, c1, c2)\n",
+      "print(nmi)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "PLM(balanced,,parallel coarsening) detected communities in 1.9882853031158447 [s]\n",
+        "solution properties:\n",
+        "-------------------  -----------\n",
+        "# communities          13\n",
+        "min community size      2\n",
+        "max community size   4599\n",
+        "avg. community size  1306.08\n",
+        "modularity              0.416774\n",
+        "-------------------  -----------\n",
+        "PLM(balanced,,parallel coarsening) detected communities in 2.6623635292053223 [s]"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "solution properties:\n",
+        "-------------------  -----------\n",
+        "# communities          14\n",
+        "min community size      2\n",
+        "max community size   3997\n",
+        "avg. community size  1212.79\n",
+        "modularity              0.416173\n",
+        "-------------------  -----------"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "0.3695414719646727\n"
+       ]
+      }
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "gc.exportGraph(G)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 180
+     "outputs": []
     }
    ],
    "metadata": {}
